// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsTab should empty 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-447"
  >
    <div
      class="makeStyles-filterActionsContainer-458 makeStyles-filterActionsContainerPadding-460"
    >
      <div
        class="MuiBox-root MuiBox-root-486 makeStyles-filterStatusContainer-461"
      >
        <div
          class="makeStyles-floatingFilterWrapper-467 makeStyles-filterWrapper-466  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-468"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-476"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Status in Project
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-470"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class=" makeStyles-container-487"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-498 makeStyles-missingAvatarBig-499 MuiAvatar-colorDefault"
        >
          <svg>
            workers.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-488 MuiTypography-body1"
      >
        There are no Projects assigned
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectsTab should loading 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-1"
  >
    <div
      class="makeStyles-filterActionsContainer-12 makeStyles-filterActionsContainerPadding-14"
    >
      <div
        class="MuiBox-root MuiBox-root-40 makeStyles-filterStatusContainer-15"
      >
        <div
          class="makeStyles-floatingFilterWrapper-21 makeStyles-filterWrapper-20  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-22"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-30"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Status in Project
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-24"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    Loading...
  </div>
</div>
`;

exports[`ProjectsTab should render consent form editable 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-tableWrapper-244"
  >
    <div
      class="makeStyles-filterActionsContainer-255 makeStyles-filterActionsContainerPadding-257"
    >
      <div
        class="MuiBox-root MuiBox-root-283 makeStyles-filterStatusContainer-258"
      >
        <div
          class="makeStyles-floatingFilterWrapper-264 makeStyles-filterWrapper-263  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-265"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-273"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Status in Project
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-267"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Job Site
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
            style="text-align: right;"
          >
            Status in Project
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
            style="display: flex; width: 92%; justify-content: flex-end;"
          >
            Documentation
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-349"
          data-testid="project-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-listName-320"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <span
                class="makeStyles-projectRowFontColor-299"
              >
                Project Awesome
              </span>
            </td>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-projectRowFontColor-299"
            >
              21 Street, Dallas
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            style="text-align: right;"
          >
            <span
              class="makeStyles-projectRowFontColor-299"
              style="margin-right: 30px;"
            >
              <div
                class="MuiChip-root makeStyles-statusChip-337 makeStyles-statusChipMargin-302 makeStyles-Accepted-347 MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  Accepted
                </span>
              </div>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-projectRowLastCell-295"
            >
              <div
                class="makeStyles-projectRowIconsWrapper-296"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-badge-modal"
                    tabindex="0"
                    title="Deactivated"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-297"
                      >
                        badge-deactivated.svg
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <span
                    class=""
                    title="Consent Form"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root"
                      data-testid="open-view-consent-form"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class="makeStyles-activeRowIcon-300 makeStyles-projectRowIcon-297"
                        >
                          document.svg
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <span
                    class=""
                    title="Project Information"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root"
                      data-testid="open-edit-consent-form"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class="makeStyles-activeRowIcon-300 makeStyles-projectRowIcon-297"
                        >
                          document_edit.svg
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-351"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ProjectsTab should render consent form view 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-tableWrapper-41"
  >
    <div
      class="makeStyles-filterActionsContainer-52 makeStyles-filterActionsContainerPadding-54"
    >
      <div
        class="MuiBox-root MuiBox-root-80 makeStyles-filterStatusContainer-55"
      >
        <div
          class="makeStyles-floatingFilterWrapper-61 makeStyles-filterWrapper-60  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-62"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-70"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Status in Project
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-64"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Job Site
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
            style="text-align: right;"
          >
            Status in Project
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
            style="display: flex; width: 92%; justify-content: flex-end;"
          >
            Documentation
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-146"
          data-testid="project-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-listName-117"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body"
            >
              <span
                class="makeStyles-projectRowFontColor-96"
              >
                Project Awesome
              </span>
            </td>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-projectRowFontColor-96"
            >
              21 Street, Dallas
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            style="text-align: right;"
          >
            <span
              class="makeStyles-projectRowFontColor-96"
              style="margin-right: 30px;"
            >
              <div
                class="MuiChip-root makeStyles-statusChip-134 makeStyles-statusChipMargin-99 makeStyles-Accepted-144 MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  Accepted
                </span>
              </div>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-projectRowLastCell-92"
            >
              <div
                class="makeStyles-projectRowIconsWrapper-93"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-badge-modal"
                    tabindex="0"
                    title="Deactivated"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-94"
                      >
                        badge-deactivated.svg
                      </svg>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <span
                    class=""
                    title="Consent Form"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root"
                      data-testid="open-view-consent-form"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class="makeStyles-activeRowIcon-97 makeStyles-projectRowIcon-94"
                        >
                          document.svg
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <span
                    class=""
                    title="Project Information"
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root"
                      data-testid="open-edit-consent-form"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class="makeStyles-activeRowIcon-97 makeStyles-projectRowIcon-94"
                        >
                          document_edit.svg
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-148"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
